--- a/.github/workflows/dockerpush.yml
+++ b/.github/workflows/dockerpush.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run tests
         run: |
           if [ -f docker-compose.test.yml ]; then
-            docker-compose up --build --file docker-compose.test.yml
+            docker-compose up --build
           else
             docker build . --file Dockerfile
           fi
