--- a/.github/workflows/dockerpush.yml
+++ b/.github/workflows/dockerpush.yml
@@ -29,7 +29,8 @@ jobs:
       - name: Run tests
         run: |
           if [ -f docker-compose.test.yml ]; then
-            docker-compose up --build
+            docker-compose --file docker-compose.test.yml build
+            docker-compose --file docker-compose.test.yml up -d
           else
             docker build . --file Dockerfile
           fi
